package com.lld.problems.parkinglot.code.constants;

public enum SlotType {
    SMALL,
    MEDIUM,
    LARGE
}