package com.lld.problems.parkinglot.code.constants;

public enum VehicleType {
    BIKE,
    TRUCK,
    CAR
}
