package com.lld.problems.parkinglot.code.models.parkingslot;

public class LargeParkingSlot extends ParkingSlot {

    public LargeParkingSlot(int slotNumber) {
        super(slotNumber);
    }
    
}
