package com.lld.problems.parkinglot.code.models.parkingslot;

public class MediumParkingSlot extends ParkingSlot {

    public MediumParkingSlot(int slotNumber) {
        super(slotNumber);
    }
    
}
