package com.lld.problems.parkinglot.code.models.parkingslot;

public interface SlotState {
    public boolean isOccupied();
}
