package com.lld.problems.parkinglot.code.models.parkingslot;

public class SmallParkingSlot extends ParkingSlot {

    public SmallParkingSlot(int slotNumber) {
        super(slotNumber);
    }

}
