@startuml 
title Class Diagram from Parking Lot System 

' Classes & Interfaces Required
class ParkingLot {
    -slots: Map<SlotType, List<ParkingSlot>>
    -parkingSlotFactory: ParkingSlotFactory
    -vehicleFactory: VehicleFactory
    -slotAssignment: SlotAssignment
    -payment: Payment

    +entry(type: VehicleType, platNumber: String) : Ticket
    +exit(ticket: Ticket) : Receipt
    +setStrategy(strategy: SlotAssignment) : void
}

abstract ParkingSlot {
    -slotNumber: int
    -occupied: boolean
    +isOccupied() : boolean
    +occupySlot() : void 
    +releaseSlot() :  void
}

abstract Vehicle{
    -platNumber: String
    -ownerName: String
    +getRequiredSlotType() : SlotType
}

class ParkingSlotFactory{
    +createSlot(type: SlotType, slotNumber: int) : ParkingSlot
}

class VehicleFactory{
    +createVehicle(type: VehicleType, platNumber: String, ownerName: String) : Vehicle
}

class SmallParkingSlot{

}

class MediumParkingSlot{

}

class LargeParkingSlot{

}

class Bike{

}

class Car{

}

class Truck{

}

class Ticket{
    -slot: ParkingSlot
    -vehicle: Vehicle
    -entryTime: DateTime
}

class Payment{
    -priceMap: Map<SlotType, Double>
    +calculateFee(ticket: Ticket) : Receipt
    +processPayment(receipt: Receipt) : void
}

interface SlotAssignment{
    +assign(vehicle: Vehicle, slotsMap: Map<SlotType, List<ParkingSlot>>) : ParkingSlot
}

interface SlotState{
    +isOccupied(): boolean
}

class NearestToEntranceSlotAssignment{

}

class NearestToExitSlotAssignment{

}

enum SlotType{
    SMALL
    MEDIUM
    LARGE
}

enum VehicleType{
    BIKE 
    CAR 
    TRUCK
}

class Receipt{
    -fee: double
    -ticket: Ticket
    -paymentStatus: boolean
}

'Relationship
ParkingLot *-- ParkingSlot
ParkingLot o-- SlotAssignment
ParkingLot --> ParkingSlotFactory
ParkingLot --> VehicleFactory
ParkingLot --> Payment

ParkingSlotFactory --> SlotType
VehicleFactory --> VehicleType

Bike --|> Vehicle
Car --|> Vehicle
Truck --|> Vehicle

LargeParkingSlot --|> ParkingSlot
MediumParkingSlot --|> ParkingSlot
SmallParkingSlot --|> ParkingSlot
ParkingSlot ..|> SlotState

NearestToEntranceSlotAssignment ..|> SlotAssignment
NearestToExitSlotAssignment ..|> SlotAssignment

Ticket --> ParkingSlot
Ticket --> Vehicle
Payment --> Ticket
Payment --> Receipt

@enduml